Fix main navigation spacing

--- a/css/main.css
+++ b/css/main.css
@@ -712,7 +712,7 @@ header {
     transform: translateX(0%);
   }
   .main-nav__item {
-    padding: 2.8rem 0;
+    padding: 2.8rem 1rem;
   }
 }
 @media only screen and (min-width: 1440px) {
