--- a/scss/layout/_main-nav.scss
+++ b/scss/layout/_main-nav.scss
@@ -30,7 +30,7 @@
         flex-direction: row;
         transform: translateX(0%);
         &__item {
-            padding: 2.8rem 0;
+            padding: 2.8rem 1rem;
         }
     }
     @media only screen and (min-width: 1440px) {
